# github_work_scripts

./: read_in_old_GC.py
GCDataProcessor/: GCDataProcessor.py  README.md
nci_file_merger/: Cargo.toml  README.md
nci_file_merger/data/: test.csv
nci_file_merger/data/PP-564/: a-all.txt
nci_file_merger/src/: data.rs  file_finder.rs  main.rs  parser.rs  pipeline.rs
older_files/: 7000D_PBDE_script_v1.py  oldGC_script_data_read_in.py
