[package]
name = "nci_file_merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[dependencies]
polars = { version = "0.39.0", features = ["lazy", "strings", "regex"] }
glob = "0.3.1"
